<resources>
    <string name="app_name">KotlinLearning</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_hint">Please input title.</string>
    <string name="description_hint">Please input description.</string>
    <string name="add_todo">add todo</string>

    <string name="tv_program_result_label">番組検索結果</string>
    <string name="tv_program_input_label">番組検索入力</string>
    <string name="entry_message">いらっしゃいませ〜わがテレビ番組表アプリへ☆o</string>
    <string name="tv_area_label">エリア</string>
    <string name="tv_genre_label">ジャンル</string>
    <string name="has_been_selected">が選択されました〜</string>
    <string name="tv_title_label">タイトル</string>
    <string name="tv_subtitle_label">サブタイトル</string>
    <string name="tv_act_label">出演者</string>
    <string name="tv_on_air_time_label">放送時間</string>
    <string name="tv_content_label">あらすじ</string>


</resources>
